I WILL MAKE MENUBAR GREAT AGAIN!!

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     <header>
         <img src="img/myxxx.png" alt="The MYXXX labs logo" id="logo">
         <ul>
-            <li>MYXXX</li>
-            <div id="dropdown">
-                <li>WASSUP</li>
-            </div>
-            <li></li>
+            <li><a href="apps/myxxx/">MYXXX</a></li>
         </ul>
     </header>
 </body>
